--- a/numerals-base.cabal
+++ b/numerals-base.cabal
@@ -40,14 +40,14 @@ library
   hs-source-dirs: src
   ghc-options: -Wall
 
-  build-depends: base                       >= 3.0.3.1 && < 4.7
+  build-depends: base                       >= 3.0.3.1 && < 5
                , base-unicode-symbols       >= 0.2.2   && < 0.3
-               , containers                 >= 0.4     && < 0.6
+               , containers                 >= 0.4     && < 0.7
                , containers-unicode-symbols >= 0.3     && < 0.4
-               , fingertree                 >= 0.0.1   && < 0.2
+               , fingertree                 >= 0.0.1
 
   if impl(ghc >= 7.2.1)
-    build-depends: integer-gmp >= 0.3 && < 0.6
+    build-depends: integer-gmp >= 0.3 && < 2
 
   exposed-modules: Text.Numeral
                  , Text.Numeral.BigNum
@@ -67,11 +67,11 @@ test-suite test-numerals-base
   hs-source-dirs: src-test
   ghc-options: -Wall
 
-  build-depends: base                       >= 3.0.3.1 && < 4.7
+  build-depends: base                       >= 3.0.3.1 && < 5
                , base-unicode-symbols       >= 0.2.2   && < 0.3
                , numerals-base              == 0.4
-               , HUnit                      >= 1.2.2   && < 1.3
-               , QuickCheck                 >= 2.4.2   && < 2.7
+               , HUnit                      >= 1.2.2   && < 2
+               , QuickCheck                 >= 2.4.2   && < 3
                , test-framework             >= 0.3.3   && < 0.9
                , test-framework-hunit       >= 0.2.6   && < 0.4
                , test-framework-quickcheck2 >= 0.2.12  && < 0.4
